# thread-independent-structures

./: LICENSE  README.md
SafeQueue/: threadsafe_queue.h
ThreadPool/: fine_grained_thread_pool.h  join_threads.h  shared_result.h  stepwise_function_wrapper.h
connection/: IConnection.h  QueueConnection.h
safe_queue/: cyclic_queue.h  threadsafe_queue.h
tests/: CMakeLists.txt  test_main.cpp
tests/ThreadPool/: test_fine_grained_thread_pool.h
tests/connection/: test_connection.h
tests/test_thread/: CMakeCache.txt  Makefile  cmake_install.cmake  test_main
tests/thread_pool/: test_fine_grained_thread_pool.h  test_shared_result.h  test_task_manager.h
thread_pool/: Task.h  TaskManager.h  fine_grained_thread_pool.h  function_wrapper.h  join_threads.h  shared_result.h  stepwise_function_wrapper.h  thread_pool.h
